--- a/News.html
+++ b/News.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <link rel="stylesheet" type="text/css" href="Css.css" />
+
 <html>
 
   <head>
@@ -28,6 +29,13 @@
     <div id="body-Div">
         <h5 id="html-Code-Home">Void@linux-desktop:/void.html/News.html</h5>
         <h1 id="my-Header">News</h1>
+
+        <h3 id="news-Header">Url search engine, dark web and more files in terminal</h1>
+          <img id="news-Img-Smaller" src="Images/tor-browser-icon.png"  alt="bilde">
+          <h4 id="text">In this update we have added some goodies.</h4>
+          <h4 id="text">The new url search engine lets the users access new sites, and be more creative.</h4>
+          <h4 id="text">We have added some new files and folders and also a new program, in the terminal. Can you find out what program it is? And how to use it?</h4>
+        <h3 id="news-Header">29.09.23</h3>
         
         <h3 id="news-Header">Kali linux and patches</h1>
           <img id="news-Img" src="Images/Kali-dragon-icon.svg.png" alt="bilde">
