--- a/Decryption.html
+++ b/Decryption.html
@@ -14,7 +14,7 @@
     
 
     <div class="navbar">
-        <a href="index.html">Home</a>
+        <a href="index.html">Desktop</a>
         <a href="News.html">News</a>
         <div class="dropdown">
           <button class="dropbtn">Dropdown 
@@ -40,6 +40,11 @@
           <h4 id="text">Master = hard</h4>
           <h4 id="text">Grandmaster = Hard +</h4>
       <h3 id="news-Header">Abstraction is one of the greatest visionary tools ever invented by human beings to imagine, decipher, and depict the world. -Jerry Saltz</h3>
+
+      <h3 id="news-Header">Hunting task 0002</h1>
+        <h4 id="text">Rank: Hacker</h4>
+        <h4 id="text">The task is to find the username and password to a victim, with the name of Bob. Furthermore, to complete this task you need to use the intelligence gathered to exploit one of his accounts on the dark web. After completion you will gain a flag, flags is a string of text that validate your completion of the task. Paste that flag in the terminal</h4>
+      <h3 id="news-Header">05.10.23</h3>
 
       <h3 id="news-Header">Hunting task 0001</h1>
         <h4 id="text">Rank: Amateur</h4>
