--- a/News.html
+++ b/News.html
@@ -12,7 +12,7 @@
   <body>    
 
     <div class="navbar">
-        <a href="index.html">Home</a>
+        <a href="index.html">Desktop</a>
         <div class="dropdown">
           <button class="dropbtn">Dropdown 
             <i class="fa fa-caret-down"></i>
@@ -29,6 +29,19 @@
     <div id="body-Div">
         <h5 id="html-Code-Home">Void@linux-desktop:/void.html/News.html</h5>
         <h1 id="my-Header">News</h1>
+
+        <h3 id="news-Header">Desktop index page update</h1>
+          <img style="border-radius: 50%;" id="news-Img-Smaller" src="Images/VoidFolderIcon.jpg"  alt="bilde">
+          <h4 id="text">In this update we added a new home page</h4>
+          <h4 id="text">The new "home" is voidcrypt's new desktop! This is an better user interface, navigation system and helps adding more content over time</h4>
+          <h4 id="text">Like past updates we in the voidcrypt team will continue with adding more features with the optimalization of the user interface. With that said, we have added more websites, expanding the search with the use of the tor.program. in the last update, our home page was the terminal now you can open and exit the terminal as you choose from voidcrypt's desktop. Some files have other permissions, and therefore the "normal" user cant access them. The terminal is useful :)</h4>
+          <h4 id="text">Patch notes:</h4>
+          <h4 id="text">- Desktop added</h4>
+          <h4 id="text">- silk-road.onion updated (Since it was under maintenance)</h4>
+          <h4 id="text">- New online users to take advantage of added (There is a way to find username and passwords of the users. And use information to exploite)</h4>
+          <h4 id="text">- Some changes to the commands/file and folder names in the terminal, mostly optimalization</h4>
+
+        <h3 id="news-Header">07.10.23</h3>
 
         <h3 id="news-Header">Url search engine, dark web and more files in terminal</h1>
           <img id="news-Img-Smaller" src="Images/tor-browser-icon.png"  alt="bilde">
