--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
             border-radius: 40%;
             padding: 2%;">
 
-            <img id="programHover" onclick="openLoveLetterTXT()" src="Images/LoveLetterIcon.png" title="Love Letter" alt="nmap" style="
+            <img id="programHover" onclick="openLoveLetterTXT()" src="Images/loveLetterIcon.png" title="Love Letter" alt="Love letter" style="
             width: 1.5cm;
             border-radius: 40%;
             padding: 2%;">
