--- a/Terminal.html
+++ b/Terminal.html
@@ -509,7 +509,7 @@
         /* Randome eget */
         function startNuniz(){
           if(userInput.value == "start nuniz.exe"){
-            window.location.href = "nuniz.html";
+            window.location.href = "Nuniz.html";
             
           }
           
