--- a/News.html
+++ b/News.html
@@ -12,7 +12,7 @@
   <body>    
 
     <div class="navbar">
-        <a href="index.html">Desktop</a>
+        <a href="desktop.html">Desktop</a>
         <div class="dropdown">
           <button class="dropbtn">Dropdown 
             <i class="fa fa-caret-down"></i>
@@ -29,6 +29,20 @@
     <div id="body-Div">
         <h5 id="html-Code-Home">Void@linux-desktop:/void.html/News.html</h5>
         <h1 id="my-Header">News</h1>
+
+        <h3 id="news-Header">Login Update!</h1>
+          <img id="news-Img-Smaller" src="Images/desktop-icon.png"  alt="bilde">
+          <h4 id="text">In this update we added a login index page and some small fixes!</h4>
+          <h4 id="text">The new login page will ensure that the visitors need to either look at the source kode to find the password or know it.</h4>
+          <h4 id="text">We made sure to fix some other small problems we found with the page for better experience. We also made one more easter egg to find, this one is a bit tricky... Cupid arrives soon.</h4>
+          <h4 id="text">Patch notes:</h4>
+          <h4 id="text">- Login page added</h4>
+          <h4 id="text">- new easter egg</h4>
+          <h4 id="text">- A working internet "turn on" button to use flamefox (ps: we will make it more advance)</h4>
+          <h4 id="text">- Added some now commands in the terminal, like "sudo"</h4>
+          <h4 id="text">- Added more "leaked" info (for those who have found that site :))</h4>
+
+        <h3 id="news-Header">28.01.24</h3>
 
         <h3 id="news-Header">Desktop index page update</h1>
           <img style="border-radius: 50%;" id="news-Img-Smaller" src="Images/VoidFolderIcon.jpg"  alt="bilde">
