--- a/Silk-Road-onion.html
+++ b/Silk-Road-onion.html
@@ -283,7 +283,7 @@
         });
 
         function exitBrowser(){
-          window.location.href = "index.html";
+          window.location.href = "desktop.html";
         }
 
         verdiInfoFunction();
