--- a/Terminal.html
+++ b/Terminal.html
@@ -509,7 +509,7 @@
         /* Randome eget */
         function startNuniz(){
           if(userInput.value == "start nuniz.exe"){
-            window.location.href = "Nuniz.html";
+            window.location.href = "nuniz.html";
             
           }
           
@@ -518,7 +518,7 @@
         /* Randome eget slutt */
 
         function exitTerminal(){
-          window.location.href = "index.html";
+          window.location.href = "desktop.html";
         }
 
         enterBtn.addEventListener('click',() => {    
