--- a/flame-Fox.html
+++ b/flame-Fox.html
@@ -163,7 +163,7 @@ background-color: rgb(0, 13, 65);">
     }
 
     function exitFlameFox(){
-      window.location.href = "index.html";
+      window.location.href = "desktop.html";
     }
 
     enterBtnSilk.addEventListener('click',() => {    
