--- a/About.html
+++ b/About.html
@@ -8,7 +8,7 @@
     <body>
         
         <div class="navbar">
-            <a href="index.html">Desktop</a>
+            <a href="desktop.html">Desktop</a>
             <a href="News.html">News</a>
             <div class="dropdown">
               
