--- a/Decryption.html
+++ b/Decryption.html
@@ -14,7 +14,7 @@
     
 
     <div class="navbar">
-        <a href="index.html">Desktop</a>
+        <a href="desktop.html">Desktop</a>
         <a href="News.html">News</a>
         <div class="dropdown">
           <button class="dropbtn">Dropdown 
