--- a/Terminal.html
+++ b/Terminal.html
@@ -518,7 +518,7 @@
         /* Randome eget slutt */
 
         function exitTerminal(){
-          window.location.href = "index.html";
+          window.location.href = "desktop.html";
         }
 
         enterBtn.addEventListener('click',() => {    
