--- a/MC.html
+++ b/MC.html
@@ -165,7 +165,7 @@ body {
       <h4>Look here for maintenance updates and news</h4>
       <p>Server Online 🟢</p>
       <h1></h1>
-      <p>No maintenance or news updates</p>
+      <p>No maintenance or news updates yet</p>
       <p></p>
       <p></p>
     </div>
