--- a/MC.html
+++ b/MC.html
@@ -163,10 +163,10 @@ body {
     <div class="card" style="color: rgb(196, 196, 196);">
       <h1 id="newsLink">NEWS <img width="40px" src="Images/Exlamation-Mark-icon.png" alt="NEWS"></h1>
       <h4>Look here for maintenance updates and news</h4>
-      <p>Server Online 🟢</p>
-      <h1></h1>
-      <p>No maintenance or news updates yet</p>
-      <p></p>
+      <p>Server offline 🔴</p>
+      <h1>02.04.24</h1>
+      <p>Server under maintenance</p>
+      <p>eta: Not for hours</p>
       <p></p>
     </div>
 
