--- a/MC.html
+++ b/MC.html
@@ -170,6 +170,16 @@ body {
       <p></p>
     </div>
 
+    <div class="card" style="color: rgb(196, 196, 196);">
+      <h1 id="newsLink">Dragon Slayed!<img width="40px" src="Images/Exlamation-Mark-icon.png" alt="NEWS"></h1>
+      <h4>02.04.23</h4>
+      <p>By player: anonymous</p>
+      <h1></h1>
+      <p>Today we had a player go against all odds, travelling through both the overworld and the nether to free the end. This player was new to the server and had one goal in mind, and that was to get the egg. After having a rough start by dying to an enderman before reaching the portal, the player managed to get their assets back and keep moving forward. But suprisingly, the harsh enviroment wasnt the only threat to this traveller. Mid-mission the player was even hunted by an hacker, and what their intentions was while they where literally flying to gain distance, we dont know. After short time the system cought up to this and banned the hacker. Shortly after we saw the [The End?] achievements, and after 9 minutes [Free the End]. We have not confirmed if the player wants their name here, for security reasons we wont give out username unless the player updates us. </p>
+      <p></p>
+      <p></p>
+    </div>
+
      
   </div>
 </div> 
