--- a/MC.html
+++ b/MC.html
@@ -149,7 +149,7 @@ body {
       <div class="fakeimg" style="height:400px; background-image: url(Images/NetherHighwayVoidMC2.png); background-size: cover;"></div>
       <p>Have you been looking for a full vanilla experience? With no in-game rules and a big world to explore, but at the same time dont want to meet players with hack clients everywhere.</p>
       <p>We at the VoidCrypt team are players just like you! We also like to play on an anarchy server that operates the vanilla experience, without plugins over the roof and hack clients are necessary. We want to even the playing ground and make an open world anarchy server which there are no rules in-game, with the exception of some, look at the <a href="MCRules.html">Rules</a> page. We value the integrity and the importance of a world where players can build and make history. Where players can make a library of written books where it never gets wiped and forgotten. A world where you can travel through a journey, and meet upon an flourishing civilisation, or an long forgotten town that was a beautiful home before. Where players can meet together and build, fight, conquer and make history.</p>
-      
+
     </div>
 
     <div style="color: rgb(196, 196, 196);" class="card">
@@ -163,19 +163,9 @@ body {
     <div class="card" style="color: rgb(196, 196, 196);">
       <h1 id="newsLink">NEWS <img width="40px" src="Images/Exlamation-Mark-icon.png" alt="NEWS"></h1>
       <h4>Look here for maintenance updates and news</h4>
-      <p>Status: online 🟢</p>
-      <h1> Server last maintenance: 02.04.24</h1>
-      <p></p>
-      <p></p>
-      <p></p>
-    </div>
-
-    <div class="card" style="color: rgb(196, 196, 196);">
-      <h1 id="newsLink">Dragon Slayed!<img width="40px" src="Images/Exlamation-Mark-icon.png" alt="NEWS"></h1>
-      <h4>02.04.23</h4>
-      <p>By player: anonymous</p>
+      <p>Server Online 🟢</p>
       <h1></h1>
-      <p>Today we had a player go against all odds, travelling through both the overworld and the nether to free the end. This player was new to the server and had one goal in mind, and that was to get the egg. After having a rough start by dying to an enderman before reaching the portal, the player managed to get their assets back and keep moving forward. But suprisingly, the harsh enviroment wasnt the only threat to this traveller. Mid-mission the player was even hunted by an hacker, and what their intentions was while they where literally flying to gain distance, we dont know. After short time the system cought up to this and banned the hacker. Shortly after we saw the [The End?] achievements, and after 9 minutes [Free the End]. We have not confirmed if the player wants their name here, for security reasons we wont give out username unless the player updates us. </p>
+      <p>No maintenance or news updates</p>
       <p></p>
       <p></p>
     </div>
