--- a/MC.html
+++ b/MC.html
@@ -124,18 +124,17 @@ body {
 <body style="background-image: url(Images/cinematicNatureMC.png); background-attachment: fixed;">
 
 <div class="header">
-  <h1 style="color: white;">VoidCrypt MC</h1>
-  <p style="color: white;">Anarchy server with no hacks!</p>
+  <h1 style="color: white;">LD SMP</h1>
+  <p style="color: white;">5 year old server with no world wipe</p>
   <img src="Images/VoidCryptLogo.jpg" width="60px" alt="" style="border-radius: 50%;">
 </div>
 
 <div class="topnav">
   <a href="MC.html">Home</a>
-  <a href="MCDiscord.html">Discord</a>
-  <a href="MCRules.html">Rules</a>
+  <a href="LDArchive.html">Archive</a>
   <a href="#newsLink">News</a>
   <div style="text-align: end;">
-    <input type="text" value="198.244.254.124:25618" id="myInput">
+    <input type="text" value="Insta: mineartgallery_" id="myInput">
 
   </div>
   
@@ -145,17 +144,30 @@ body {
   <div class="leftcolumn">
     <div class="card" style="color: rgb(196, 196, 196);">
       <h1>About</h1>
-      <h3>This is a new server with a new 1.20.4 seed</h3>
-      <div class="fakeimg" style="height:400px; background-image: url(Images/NetherHighwayVoidMC2.png); background-size: cover;"></div>
-      <p>Have you been looking for a full vanilla experience? With no in-game rules and a big world to explore, but at the same time dont want to meet players with hack clients everywhere.</p>
-      <p>We at the VoidCrypt team are players just like you! We also like to play on an anarchy server that operates the vanilla experience, without plugins over the roof and hack clients are necessary. We want to even the playing ground and make an open world anarchy server which there are no rules in-game, with the exception of some, look at the <a href="MCRules.html">Rules</a> page. We value the integrity and the importance of a world where players can build and make history. Where players can make a library of written books where it never gets wiped and forgotten. A world where you can travel through a journey, and meet upon an flourishing civilisation, or an long forgotten town that was a beautiful home before. Where players can meet together and build, fight, conquer and make history.</p>
+      <h3>Small norwegian community server with roots back to 1.15!</h3>
+      <div class="fakeimg" style="height:400px; background-image: url(Images/LDSMPWindmill.png); background-size: cover;"></div>
+      <p>This server started with some twitch streamers that made a collab. Made this world we are playing on today and streamed together. LD's SMP values the integrity of the world and therefore will never wipe the server.</p>
+      <p>This page is not for recruiting or advertisement for the server, and not for people to join. This is mainly a site for the server and where we update the world archives and history, news and maintenance updates.</p>
+      <br>
+      <p>Check out our instagram! We have some posts from our modded server too, but when there are any mods we mention it in the post. Mostly pictures from the LD SMP Vanilla server!</p>
+
 
     </div>
+    <br>
+    <br>
+    <script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
+    <div class="elfsight-app-b4081a23-b985-4a88-bb83-142dcc57568a" data-elfsight-app-lazy></div>
 
     <div style="color: rgb(196, 196, 196);" class="card">
       <h2>Community Screenshot Display</h2>
       <p>Screenshot: Cocospaniel</p>
       <div class="fakeimg" style="height:500px;background-image: url(Images/CinematicCocoBackMC.png); background-size: cover;"></div>
+      <p>Screenshot: Nuniiz</p>
+      <div class="fakeimg" style="height:500px;background-image: url(Images/LDSMPChapel.png); background-size: cover;"></div>
+      <p>Screenshot: Lazy</p>
+      <div class="fakeimg" style="height:500px;background-image: url(Images/EndCastleRandomSS.png); background-size: cover;"></div>
+
+
     </div>
 
     <!-- Update News Here -->
@@ -176,8 +188,8 @@ body {
 
 
 <div style="color: white; text-align: start;" class="footer">
-  <h2>VoidCrypt</h2>
-  <p>Contact: voidcrypt@hotmail.com</p>
+  <h2>LD SMP</h2>
+  <p>VoidCrypt</p>
 </div>
 
 </body>
