--- a/MC.html
+++ b/MC.html
@@ -177,9 +177,9 @@ body {
       <h4>Look here for maintenance updates and news</h4>
       <p>Server Online 🟢</p>
       <h1></h1>
-      <p>No maintenance or news updates</p>
-      <p></p>
-      <p></p>
+      <p>The first trial chambers has been located on the server!</p>
+      <p>The new beginnings town was the first settlement to explore it.</p>
+      <p>(11.09.24 20:30)</p>
     </div>
 
      
