--- a/MC.html
+++ b/MC.html
@@ -177,8 +177,8 @@ body {
       <h4>Look here for maintenance updates and news</h4>
       <p>Server Online 🟢</p>
       <h1></h1>
-      <p>No maintenance or news updates</p>
-      <p></p>
+      <h1>Trial Chambers (11.09.24, 20:30)</h1>
+      <p>New 1.21.1 chunks have been loaded and the first trial chambers have been found! The ned Beginnings city was the first to step in to the chambers. The national library of LD is working on adding this discovery to the history section of the library.</p>
       <p></p>
     </div>
 
