--- a/News.html
+++ b/News.html
@@ -30,6 +30,28 @@
         <h5 id="html-Code-Home">Void@linux-desktop:/void.html/News.html</h5>
         <h1 id="my-Header">News</h1>
 
+        <h3 id="news-Header">Voidcrypt 2.0 under maintenance!</h1>
+          <img id="news-Img-Smaller" src="Images/VoidCryptLogo.jpg"  alt="bilde" style="border-radius: 50%;">
+          <h4 id="text">
+            The voidcrypt team are working on a big re-skin of the whole voidcrypt machine!<br> <br>
+            Many quality of life changes, better interface, cleaner look, a more dynamic and realistic desktop simulator and much more<br> <br>
+            
+            WE ALSO ADDED A NEW CLICKER GAME APP IN THE DESKTOP
+
+            Patch notes: <br> <br>
+            We are going to make this part slim because we want a more first-time look when the update releases, but some elements are: <br> <br>
+            - Individual player user info and stats <br>
+            - New upgraded missions <br> 
+            - Achievements <br> 
+            - Hidden features <br>
+            - Hidden features <br>
+            - Hidden features <br>
+            - Hidden features <br>
+
+          </h4>
+          
+        <h3 id="news-Header">10.11.24</h3>
+
         <h3 id="news-Header">Mail Update!</h1>
           <img id="news-Img-Smaller" src="Images/email-icon-trans.png"  alt="bilde">
           <h4 id="text">
