--- a/voidClicker.html
+++ b/voidClicker.html
@@ -12,7 +12,7 @@
 
         /* Hele skjermen */
         body {
-            background-image: url(images/world-map-icon-trans.png); /* Sett bakgrunnsbildets sti */
+            background-image: url("images/world-map-icon-trans.png"); /* Sett bakgrunnsbildets sti */
             background-size: cover; /* Sørger for at bakgrunnen dekker hele skjermen */
             background-position: center center; /* Plasserer bildet i midten */
             background-attachment: fixed; /* Får bakgrunnen til å være fast når du scroller */
