index side til qr kode

--- a/AarligUndersokelse.html
+++ b/AarligUndersokelse.html
@@ -96,7 +96,7 @@
       </label>
       <label style="display: none;">
         Your message:
-        <textarea name="message">Noen klikket</textarea>
+        <textarea name="message">Noen klikket "refresh"</textarea>
       </label>
       <button type="submit" id="submitBtn">
         Refresh siden
