--- a/AarligUndersokelse.html
+++ b/AarligUndersokelse.html
@@ -109,7 +109,7 @@
      
     <a href="mailto:medarbeider@eurosign.no">medarbeider@eurosign.no</a> | 
     <a href="https://www.eurosign.no">www.eurosign.no</a> | 
-    <a href="https://www.formspree.io">Samarbeid: Formspree</a>
+    <a href="https://www.formspree.io">Samarbeid: Undersøkelse</a>
   </footer>
 </body>
 </html>
