--- a/an44898fj4w90k440wj9fk49k9834jt043wimkh66rokfw8fw3ji4wfk04r49kopfk4k0.html
+++ b/an44898fj4w90k440wj9fk49k9834jt043wimkh66rokfw8fw3ji4wfk04r49kopfk4k0.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Medarbeiderundersøkelse</title>
+  <link rel="icon" type="image/x-icon" href="/bilder/EurosignMiniLogo.png">
   <style>
     * {
       box-sizing: border-box;
@@ -84,7 +85,7 @@
   <div class="container">
     <img src="bilder/eurosignLogo.png" alt="Firma Logo" class="logo" /> 
     <h1>Noe gikk galt</h1>
-    <p>Vennligst kom tilbake senere. Eller refresh siden:</p>
+    <p>Vennligst kom tilbake senere eller oppdater siden:</p>
   
     <form
       action="https://formspree.io/f/xldjlzkk"
@@ -99,7 +100,7 @@
         <textarea name="message">Noen klikket "refresh"</textarea>
       </label>
       <button type="submit" id="submitBtn">
-        Refresh siden
+        Oppdater siden
       </button>
     </form>
   
